# Phoenix

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  MakeSLN.bat  README.md
.github/workflows/: main.yml
Phoenix/: CMakeLists.txt
Phoenix/Globals/: CMakeLists.txt  Globals.hpp  globals.hpp
Phoenix/Phoenix/: Block.cpp  Blocks.cpp  Blocks.hpp  Bootloader.cpp  CMakeLists.txt  Chunk.cpp  Chunk.hpp  Collision.cpp  Collision.hpp  DebugUI.cpp  DebugUI.hpp  DebugWindows.cpp  DebugWindows.hpp  InputHandler.cpp  InputHandler.hpp  Mods.cpp  Mods.hpp  Phoenix.cpp  Phoenix.hpp  Statistics.cpp  Statistics.hpp  Timing.cpp  Timing.hpp  World.cpp  World.hpp  WorldRenderer.cpp  WorldRenderer.hpp  bootloader.cpp  phoenix.cpp  phoenix.hpp
Phoenix/Renderer/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Device.cpp  Device.hpp  DeviceMemory.cpp  DeviceMemory.hpp  FramebufferAttachment.cpp  FramebufferAttachment.hpp  MemoryAllocator.cpp  MemoryAllocator.hpp  MemoryHeap.cpp  MemoryHeap.hpp  Pipeline.cpp  Pipeline.hpp  PipelineLayout.cpp  PipelineLayout.hpp  PostFX.cpp  PostFX.hpp  RenderTarget.cpp  RenderTarget.hpp  Renderpass.cpp  Renderpass.hpp  ResourcePacket.cpp  ResourcePacket.hpp  ResourceTable.cpp  ResourceTable.hpp  ResourceTableLayout.cpp  ResourceTableLayout.hpp  StaticMesh.cpp  StaticMesh.hpp  Texture.cpp  Texture.hpp  Vulkan.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  (+29 more)
Phoenix/ResourceManager/: CMakeLists.txt  GlobalResources.cpp  GlobalResources.hpp  RenderTechnique.cpp  RenderTechnique.hpp  ResourceManager.cpp  ResourceManager.hpp  globalresources.cpp  globalresources.hpp  rendertechnique.cpp  rendertechnique.hpp  resourcemanager.cpp  resourcemanager.hpp
Phoenix/Windowing/: CMakeLists.txt  Window.cpp  Window.hpp  window.cpp  window.hpp
Tools/: license.txt  licensor.py
latest/: CMakeLists.txt
latest/Debug/: Phoenix_d.exp
latest/data/Pipelines/: Default.xml  Definitions.xml  Skybox.xml  StandardMaterial.xml  ViewFrustrumCulling.xml
latest/data/Shaders/: build_shaders.bat
latest/data/Shaders/Diffuse/: frag.spv  shader.frag  shader.vert  vert.spv
latest/data/Shaders/ImGUI/: frag.spv  run.bat  shader.frag  shader.vert  vert.spv
latest/data/Shaders/Skybox/: frag.spv  shader.frag  shader.vert  vert.spv
latest/data/Shaders/StandardMaterial/: frag.spv  shader.frag  shader.vert  vert.spv
latest/data/Shaders/ViewFrustrumCulling/: comp.spv  shader.comp
latest/data/Shaders/_includes/: Camera.glsl  ChunkPositions.glsl  Constants.glsl  IndirectCommand.glsl
latest/mods/standard_blocks-0.1/: standard_blocks.xml
